[package]
name = "tokio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures = "0.3.19"
console-subscriber = "0.1.0"
tokio = { version = "1.15", features = ["full", "tracing"] }
tokio-util = { version = "0.6.9", features = ["codec"]}
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }